# crypto-monitor

./: CMakeLists.txt  portfolio.json
src/: CMakeLists.txt  main.cpp  openssl_hostname_validation.cpp  scheduled_client.cpp  scheduled_client.h  ticker.cpp  ticker.h
